--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^5.0.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.1",
+    "redux-persist": "^4.9.1",
     "uuid": "^3.1.0"
   }
 }
